Remove height attribute from the footer and fix footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,9 +202,9 @@ footer {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 20vh;
     margin-top: auto;
     background-color: #ff6d00;
+    padding: 20px 0;
 }
 
 footer input[type="email"], .signup-btn {
@@ -389,9 +389,9 @@ footer ul#social-networks a {
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        height: 6vh;
         margin-top: auto;
+        padding: 0 20px;
     }
 }
